feat:  add pagination/search/sorting where needed
